--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@admin-bro/express": "~3.0.1",
-    "@admin-bro/mongoose": "~1.1.0",
+    "@admin-bro/mongoose": "^1.0.2",
+    "@azure/msal-node": "^1.2.0",
     "@sentry/node": "~6.4.1",
     "@sentry/tracing": "~6.4.1",
-    "admin-bro": "~4.0.1",
+    "admin-bro": "^3.2.5",
+    "admin-bro-mongoose": "^0.5.2",
+    "axios": "^0.21.1",
     "bcryptjs": "~2.4.3",
-    "connect-mongodb-session": "^2.4.1",
+    "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "~10.0.0",
@@ -26,7 +29,7 @@
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "~8.5.1",
-    "mongoose": "~5.12.12",
+    "mongoose": "^5.13.11",
     "morgan": "~1.9.1",
     "nodemon": "~2.0.7"
   },
